css/main.css
html, body {
	overflow-y: hidden;
}
html, body, img, dl, dt, dd {
	margin: 0;
	padding: 0;
	background-color: #23232D;
}
h1, h2, h3, h4 {
	margin: 0;
	padding: 0;
	font-family: "Avenir Next", Trebuchet MS, Arial;
	font-weight: normal;
	color: #fff;
}
a {
	color: inherit;
	text-decoration: none;
}
a:hover {
	border-bottom: 1px solid #fff;
}

#frame {
	position: absolute;
	width: 100%;
	height: 100%;
	background-color: #23232D;
}

#loader {
	position: absolute;
	height: 40px;
	width: 40px;
	top: 50%;
	left: 50%;
	margin: -20px 0 0 -20px;
	font-family: "Helvetica Neue", Verdana;
	color: #fff;
	font-size: 0.6em;
	text-transform: uppercase;
}

#results {
	position: absolute;
	display: none;
	overflow: hidden;
}

.thumbnail, .cover {
	width: 250px;
	height: 250px;
	float: left;
	overflow: hidden;
	cursor: pointer;
}
.thumbnail .cover {
	position: absolute;
}

.btn-play {
	position: absolute;
	z-index: 1000;
	width: 30px;
	height: 30px;
	background: transparent;
	vertical-align: middle;
}

.overlay {
	position: relative;
	height: 100%;
	width: 100%;
	background-color: #23232D;
}

.track-information {
	display: block;
	position: absolute;
	z-index: 1000;
	padding: 20px;
	overflow: hidden;
}
.track-information h1 {
	font-size: 18px;
	line-height: 26px;
}
.track-information h2 {
	font-size: 15px;
	line-height: 22px;
}
.track-information h2 em{
	font-size: 14px;
	color: #e1e1e1;
}

#player {
	z-index: 2000;
	position: fixed;
	left: 20px;
	bottom: 0;
	padding: 10px;
	background-color: #23232D;
	font-family: "Avenir Next", Trebuchet MS, Arial;
	opacity: 0.8;
}
#player h3 {
	font-size: 13px;
	font-weight: normal;
} #player h3 em {
	font-weight: 100;
	font-style: normal;
}
#player .fa {
	margin-right: 5px;
}

